--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="row" id="image_content">
       <div class="card col-md-4"></div>
       <div id="image_card" class="card col-md-4">
-          <img src="" id="image" data-id=""/>
-          <h4 id="name">Title of image goes here</h4>
+          <!-- <img src="" id="image" data-id=""/> -->
+          <!-- <h4 id="name">Title of image goes here</h4>
           <span>Likes:
             <span id="likes">Likes Go Here</span>
           </span>
@@ -30,8 +30,8 @@
             <input type="submit" value="Submit"/>
           </form>
           <ul id="comments">
-               <!-- <li> for each comment goes here -->
-          </ul>
+          
+          </ul> -->
         </div>
       <div class="card col-md-4"></div>
     </div>
