--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
           <img src="" id="image" data-id=""/>
           <h4 id="name">Title of image goes here</h4>
           <span>Likes:
-            <span id="likes">Likes Go Here</span>
+            <span id="likes">0</span>
           </span>
           <button id="like_button">Like</button>
           <form id="comment_form">
             <input id="comment_input" type="text" name="comment" placeholder="Add Comment"/>
-            <input type="submit" value="Submit"/>
+            <input id="submit" type="submit" value="Submit"/>
           </form>
           <ul id="comments">
                <!-- <li> for each comment goes here -->
