--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       <div class="card col-md-4"></div>
     </div>
   </div>
+  <script type="text/javascript" src='src/adapter.js'></script>
+  <script type="text/javascript" src='src/comment.js'></script>
+  <script type="text/javascript" src='src/dom.js'></script>
+  <script type="text/javascript" src='src/image.js'></script>
   <script type="text/javascript" src='src/index.js'></script>
   </body>
 </html>
